--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,14 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="violet">#B1B2FF</color>
+    <color name="cobalt">#AAC4FF</color>
+    <color name="lilla">#D2DAFF</color>
+    <color name="indaco">#E3E8FF</color>
+
+    //dark color
+    <color name="light_black">#454545</color>
+    <color name="full_orange">#FF6000</color>
+    <color name="light_orange">#FFA559</color>
+    <color name="pink_salomon">#FFE6C7</color>
 </resources>
