--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/home"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -10,15 +11,14 @@
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/chart"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="216dp"
+        android:layout_margin="10pt"
         android:background="@drawable/container_home"
-        app:layout_constraintTop_toTopOf="parent"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toTopOf="@+id/guideline1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/guideline1"
-        android:layout_margin="10pt"
-        android:scaleType="fitCenter"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline1"
@@ -91,7 +91,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/exits_label"
-            android:layout_marginStart="10pt"
+            android:layout_marginStart="12.5pt"
             app:layout_constraintLeft_toRightOf="@id/exits_text_home"
             app:layout_constraintBaseline_toBaselineOf="@id/exits_text_home"
             android:theme="@style/TextStyle"
@@ -101,7 +101,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/label_entries_totale"
-            android:layout_marginStart="10pt"
+            android:layout_marginStart="32.5pt"
             app:layout_constraintLeft_toRightOf="@id/total_text_home"
             app:layout_constraintBaseline_toBaselineOf="@id/total_text_home"
             android:theme="@style/TextStyle"
