--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,12 +2,12 @@
     <!-- Base application theme. -->
     <style name="Theme.CasHelper" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/cobalt</item>
-        <item name="colorPrimaryVariant">@color/indaco</item>
+        <item name="colorPrimary">@color/full_orange</item>
+        <item name="colorPrimaryVariant">@color/light_black</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/violet</item>
-        <item name="colorSecondaryVariant">@color/lilla</item>
+        <item name="colorSecondary">@color/pink_salomon</item>
+        <item name="colorSecondaryVariant">@color/light_orange</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimary</item>
@@ -16,7 +16,6 @@
         <item name="backgroundColor">?attr/colorPrimaryVariant</item>
         <item name="colorContainer">?attr/colorSecondary</item>
     </style>
-
     <style name="TextStyle">
 
         <item name="android:textColor">?attr/colorOnSecondary</item>
