--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,9 +12,13 @@
     <color name="lilla">#D2DAFF</color>
     <color name="indaco">#E3E8FF</color>
 
-    //dark color
+    //dark colors
     <color name="light_black">#454545</color>
     <color name="full_orange">#FF6000</color>
     <color name="light_orange">#FFA559</color>
     <color name="pink_salomon">#FFE6C7</color>
+
+    //pieChart colors
+    <color name="Exits">#FA1020</color>
+    <color name="Entries">#30950E</color>
 </resources>
