--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,26 +1,27 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.CasHelper" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/full_orange</item>
-        <item name="colorPrimaryVariant">@color/light_black</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/pink_salomon</item>
-        <item name="colorSecondaryVariant">@color/light_orange</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimary</item>
-        <!-- Customize your theme here. -->
-        <item name="colorBackgroundFloating">?attr/colorPrimary</item>
-        <item name="backgroundColor">?attr/colorPrimaryVariant</item>
-        <item name="colorContainer">?attr/colorSecondary</item>
-    </style>
-    <style name="TextStyle">
+<!-- Base application theme. -->
+<style name="Theme.CasHelper" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <!-- Primary brand color. -->
+    <item name="colorPrimary">@color/cobalt</item>
+    <item name="colorPrimaryVariant">@color/indaco</item>
+    <item name="colorOnPrimary">@color/white</item>
+    <!-- Secondary brand color. -->
+    <item name="colorSecondary">@color/violet</item>
+    <item name="colorSecondaryVariant">@color/lilla</item>
+    <item name="colorOnSecondary">@color/black</item>
+    <!-- Status bar color. -->
+    <item name="android:statusBarColor">?attr/colorPrimary</item>
+    <!-- Customize your theme here. -->
+    <item name="colorBackgroundFloating">?attr/colorPrimary</item>
+    <item name="backgroundColor">?attr/colorPrimaryVariant</item>
+    <item name="colorContainer">?attr/colorSecondary</item>
+</style>
 
-            <item name="android:textColor">?attr/colorOnSecondary</item>
-            <item name="android:textSize">16sp</item>
-            <item name="android:textStyle">bold</item>
+<style name="TextStyle">
 
-    </style>
+    <item name="android:textColor">?attr/colorOnSecondary</item>
+    <item name="android:textSize">16sp</item>
+    <item name="android:textStyle">bold</item>
+
+</style>
 </resources>
