--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -15,12 +15,19 @@
         <item name="colorBackgroundFloating">?attr/colorPrimary</item>
         <item name="backgroundColor">?attr/colorPrimaryVariant</item>
         <item name="colorContainer">?attr/colorSecondary</item>
+        <!-- Customize app_bar. -->
+        <item name="android:actionOverflowButtonStyle">@style/MenuStyle</item>
     </style>
+
     <style name="TextStyle">
 
         <item name="android:textColor">?attr/colorOnSecondary</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
 
+    </style>
+
+    <style name="MenuStyle" parent="Widget.AppCompat.ActionButton.Overflow">
+        <item name="android:src">@drawable/menu_home</item>
     </style>
 </resources>
