--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,37 +22,25 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5"/>
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <TextView
+        android:id="@+id/month_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/container_home"
+        android:text="@string/month"
+        app:layout_constraintRight_toLeftOf="@id/midline_home"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/guideline0"
-        android:layout_margin="2pt">
-        <TextView
-            android:id="@+id/month_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/month"
-            android:theme="@style/TextStyle"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+        android:layout_margin="2pt"/>
 
-        <TextView
-            android:id="@+id/year_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/year"
-            android:theme="@style/TextStyle"
-            app:layout_constraintLeft_toRightOf="@id/month_text"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBaseline_toBaselineOf="@id/month_text"
-            android:layout_margin="2pt"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/year_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/year"
+        app:layout_constraintLeft_toRightOf="@id/midline_home"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/guideline0"
+        android:layout_margin="2pt"/>
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/back_month"
         android:layout_width="wrap_content"
@@ -63,6 +51,7 @@
         app:icon="@drawable/baseline_arrow_back"
         android:contentDescription="@string/back_month_button"
         app:elevation="0dp"
+        android:layout_marginLeft="5pt"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/guideline0"/>
@@ -77,6 +66,7 @@
         app:icon="@drawable/baseline_arrow_next"
         android:contentDescription="@string/next_month_button"
         app:elevation="0dp"
+        android:layout_marginRight="5pt"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/guideline0"/>
