--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,10 @@
     <color name="full_orange">#FF6000</color>
     <color name="light_orange">#FFA559</color>
     <color name="pink_salomon">#FFE6C7</color>
+    <color name="dark_purple">#393646</color>
+    <color name="purple">#4F4557</color>
+    <color name="light_purple">#6D5D6E</color>
+    <color name="sand">#F4EEE0</color>
 
     //pieChart colors
     <color name="Exits">#FA1020</color>
