--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -51,7 +51,7 @@
         app:icon="@drawable/baseline_arrow_back"
         android:contentDescription="@string/back_month_button"
         app:elevation="0dp"
-        android:layout_marginLeft="5pt"
+        android:layout_marginStart="5pt"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/guideline0"/>
@@ -66,7 +66,7 @@
         app:icon="@drawable/baseline_arrow_next"
         android:contentDescription="@string/next_month_button"
         app:elevation="0dp"
-        android:layout_marginRight="5pt"
+        android:layout_marginEnd="5pt"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/guideline0"/>
@@ -92,7 +92,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="293dp" />
+        app:layout_constraintGuide_percent="0.4" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
