--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -34,4 +34,9 @@
     <item name="android:textStyle">bold</item>
 
 </style>
+    <style name="TitleStyle">
+        <item name="android:textColor">?attr/colorOnSecondary</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
