--- a/app/src/main/res/layout/fragment_incoming.xml
+++ b/app/src/main/res/layout/fragment_incoming.xml
@@ -11,80 +11,27 @@
     android:background="?attr/backgroundColor">
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline0"
+        android:id="@+id/guidelineIncoming0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.1" />
+        app:layout_constraintGuide_percent="0.05" />
+
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.15" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/midline_home"
+        android:id="@+id/midline_homeIncoming"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5"/>
-    <TextView
-        android:id="@+id/month_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/month"
-        app:layout_constraintRight_toLeftOf="@id/midline_home"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/guideline0"
-        android:layout_margin="2pt"/>
+
 
     <TextView
-        android:id="@+id/year_text"
+        android:id="@+id/incoming_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/year"
-        app:layout_constraintLeft_toRightOf="@id/midline_home"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/guideline0"
-        android:layout_margin="2pt"/>
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/back_month"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="top"
-        android:theme="@style/Theme.CasHelper"
-        app:backgroundTint="?attr/colorBackgroundFloating"
-        app:icon="@drawable/baseline_arrow_back"
-        android:contentDescription="@string/back_month_button"
-        app:elevation="0dp"
-        android:layout_marginStart="5pt"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/guideline0"/>
-
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/next_month"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="top"
-        android:theme="@style/Theme.CasHelper"
-        app:backgroundTint="?attr/colorBackgroundFloating"
-        app:icon="@drawable/baseline_arrow_next"
-        android:contentDescription="@string/next_month_button"
-        app:elevation="0dp"
-        android:layout_marginEnd="5pt"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/guideline0"/>
-
-    <TextView
-        android:id="@+id/entries_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/entries_title"
-        app:layout_constraintTop_toBottomOf="@id/guideline0"
+        android:text="@string/incoming_title"
+        app:layout_constraintBottom_toTopOf="@id/guidelineIncoming0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:theme="@style/TitleStyle"
@@ -94,10 +41,10 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/container_home"
-        app:layout_constraintTop_toBottomOf="@id/guideline1"
+        app:layout_constraintTop_toBottomOf="@id/guidelineIncoming0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/guideline2"
+        app:layout_constraintBottom_toTopOf="@id/guidelineIncoming1"
         android:layout_margin="10pt">
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/chart"
@@ -107,55 +54,40 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
+        android:id="@+id/guidelineIncoming1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.4" />
+        app:layout_constraintGuide_percent="0.30" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline3"
+        android:id="@+id/guidelineIncoming2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.6" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_category"
+        android:id="@+id/recycle_view_categories"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/container_home"
-        app:layout_constraintTop_toBottomOf="@id/guideline2"
-        app:layout_constraintBottom_toTopOf="@id/guideline3"
+        app:layout_constraintBottom_toTopOf="@id/guidelineIncoming2"
+        app:layout_constraintTop_toBottomOf="@id/guidelineIncoming1"
         android:layout_marginStart="10pt"
         android:layout_marginEnd="10pt"
         android:theme="@style/TextStyle"
         />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_entries"
+        android:id="@+id/recycler_view_incoming"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/container_home"
-        app:layout_constraintTop_toBottomOf="@id/guideline3"
+        app:layout_constraintTop_toBottomOf="@id/guidelineIncoming2"
         android:layout_marginStart="10pt"
         android:layout_marginEnd="10pt"
         android:theme="@style/TextStyle"
         />
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/add_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="bottom|end"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:theme="@style/Theme.CasHelper"
-        app:backgroundTint="?attr/colorBackgroundFloating"
-        app:icon="@drawable/add_fab_home"
-        android:contentDescription="@string/add_fab_home_desc"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
