fragment_add_item  + change activity
Create the fragment add_item (not completed). Added the possibility to change activities with the opportunity button

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,7 @@
     //pieChart colors
     <color name="Exits">#FA1020</color>
     <color name="Entries">#30950E</color>
+
+
+    <color name="confirm">#DDFFBB</color>
 </resources>
