--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -174,16 +174,23 @@
             android:theme="@style/TextStyle"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/container_home"
         app:layout_constraintTop_toBottomOf="@id/guideline2"
-        android:layout_marginStart="10pt"
-        android:layout_marginEnd="10pt"
-        android:theme="@style/TextStyle"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        >
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/container_home"
+            android:layout_marginStart="10pt"
+            android:layout_marginEnd="10pt"
+            android:theme="@style/TextStyle"
+            />
+
+    </LinearLayout>
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/add_item"
         android:layout_width="wrap_content"
