--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,18 +14,15 @@
             app:destination="@id/addFragment"
         />
     </fragment>
-
-
     <fragment
         android:id="@+id/addFragment"
         android:name="unipd.dei.cashelper.ui.AddItemFragment"
         android:label="AddItem"
-        tools:layout="@layout/fragment_add_item"
-        >
-       <action
-           android:id="@+id/action_addFragment_to_homeFragment"
-           app:destination="@id/homeFragment"
-           />
+        tools:layout="@layout/fragment_add_item">
+        <action
+            android:id="@+id/action_addFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            />
     </fragment>
 
 
