--- a/app/src/main/res/layout/fragment_add_item.xml
+++ b/app/src/main/res/layout/fragment_add_item.xml
@@ -116,6 +116,7 @@
         android:background="@drawable/container_home"
         android:layout_marginBottom="20pt"
         android:text="@string/confirm_button"
+        android:enabled="false"
         />
     <Switch
         android:layout_width="wrap_content"
