--- a/app/src/main/res/layout/fragment_add_item.xml
+++ b/app/src/main/res/layout/fragment_add_item.xml
@@ -76,13 +76,9 @@
         android:id="@+id/category_select"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20pt"
-        android:layout_marginEnd="20pt"
         android:minHeight="48dp"
         android:gravity="center"
-        android:background="@drawable/container_home"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/guidelineDescriptionSX"
         app:layout_constraintTop_toBottomOf="@id/guideline1_add_item"
         app:layout_constraintBottom_toTopOf="@id/guideline2_add_item"/>
 
@@ -90,18 +86,15 @@
         android:id="@+id/value_add_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/container_home"
         android:hint="@string/value_add"
         android:inputType="numberDecimal"
         app:layout_constraintBottom_toTopOf="@+id/guideline3_add_item"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guidelineDescriptionSX"
         app:layout_constraintTop_toBottomOf="@id/guideline2_add_item" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/container_home"
         app:layout_constraintBottom_toTopOf="@+id/guideline4_add_item"
         app:layout_constraintStart_toEndOf="@+id/guidelineDescriptionSX"
         app:layout_constraintEnd_toStartOf="@+id/guidelineDescriptionDX"
@@ -115,7 +108,6 @@
             android:inputType="textMultiLine"
             android:hint="@string/description_add"
             android:id="@+id/description_add_item"
-            android:backgroundTint="@color/violet"
             android:maxLength="50"
 
             />
