--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
         android:paddingVertical="10dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/container_item">
 
         <TextView
