--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,6 +21,11 @@
 
 
 </style>
+<style name="delete_button">
+    <item name="backgroundTint">@color/Exits</item>
+    <item name="android:textColor">@color/white</item>
+</style>
+
 
    <style name="MenuStyle" parent="Widget.AppCompat.ActionButton.Overflow">
        <item name="android:src">@drawable/menu_home</item>
