--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -19,6 +19,22 @@
         <item name="android:actionOverflowButtonStyle">@style/MenuStyle</item>
     </style>
 
+    <style name="delete_button">
+        <item name="backgroundTint">@color/Exits</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="add_button">
+        <item name="backgroundTint">@color/Entries</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="disable_button">
+        <item name="backgroundTint">@color/Disable</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+
     <style name="TextStyle">
 
         <item name="android:textColor">?attr/colorOnSecondary</item>
