--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,6 +27,16 @@
 </style>
 
 
+    <style name="add_button">
+        <item name="android:background">@color/Entries</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="disable_button">
+        <item name="android:background">@color/Disable</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
    <style name="MenuStyle" parent="Widget.AppCompat.ActionButton.Overflow">
        <item name="android:src">@drawable/menu_home</item>
    </style>
