--- a/app/src/main/res/layout/fragment_add_item.xml
+++ b/app/src/main/res/layout/fragment_add_item.xml
@@ -156,7 +156,7 @@
         android:background="@drawable/container_add_button"
         android:layout_marginBottom="20pt"
         android:text="@string/confirm_button"
-
+        style="@style/add_button"
         />
 
     <Button
