--- a/app/src/main/res/layout/fragment_add_item.xml
+++ b/app/src/main/res/layout/fragment_add_item.xml
@@ -101,6 +101,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/value_add"
         android:inputType="numberDecimal"
+        android:maxLength="12"
         app:layout_constraintBottom_toTopOf="@+id/guideline3_add_item"
         app:layout_constraintStart_toStartOf="@+id/guidelineDescriptionSX"
         app:layout_constraintTop_toBottomOf="@id/guideline2_add_item"
