--- a/app/src/main/res/layout/fragment_update_item.xml
+++ b/app/src/main/res/layout/fragment_update_item.xml
@@ -100,6 +100,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/value_add"
         android:inputType="numberDecimal"
+        android:maxLength="12"
         app:layout_constraintBottom_toTopOf="@+id/guideline3_update_item"
         app:layout_constraintStart_toStartOf="@+id/guidelineDescriptionSX_update"
         app:layout_constraintTop_toBottomOf="@id/guideline2_update_item"
